--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <br/>Credits to 
                 <a 
                     class="footer__link" 
-                    href="https://youtu.be/5RIFrZEjURA"
+                    href="https://www.youtube.com/watch?v=RTIueV7zERY&t=167s"
                 >
                     Bedimcode inspiration
                 </a>
